--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -5,11 +5,16 @@
   padding: 6px 15px;
 }
 
-.clear {
+.clear,
+.clearInverted {
   padding: 0;
   border: none;
   background: none;
   outline: none;
+}
+
+.clearInverted {
+  color: var(--inverted-primary-color);
 }
 
 .outline {
@@ -24,7 +29,7 @@
   border: none;
 }
 
-.background_inverted {
+.backgroundInverted {
   background: var(--inverted-bg-color);
   color: var(--inverted-primary-color);
   border: none;
