--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -1,10 +1,10 @@
 .title {
-  font-size: var(--font-xl);
+  font: var(--font-l);
   color: var(--primary-color);
 }
 
 .text {
-  font-size: var(--font-m);
+  font: var(--font-m);
   color: var(--secondary-color);
 }
 
