--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -3,18 +3,24 @@
   border: 2px solid var(--inverted-bg-color);
 }
 
-.header {
-  display: flex;
-}
-
-.editBtn {
-  margin-left: auto;
-}
-
-.data {
-  margin-top: 30px;
-}
-
 .input {
   margin-top: 10px;
+}
+
+.avatarWrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.loading,
+.error {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.editing {
+  border: 2px solid var(--inverted-primary-color);
 }
