--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -17,3 +17,15 @@
     color: var(--error-dark-color);
   }
 }
+
+.left {
+  text-align: left;
+}
+
+.center {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
+}
